# Maintenance_Preventive

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  architecture.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: streamlit_app.py
frontend/: app.js  index.html  style.css
monitoring/grafana/dashboards/: maintenance_overview.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
scripts/: build-features.ps1  fetch-dataset.ps1  run-api.ps1  run-dashboard.ps1  run-mlflow.ps1  setup-venv.ps1  start-mlops-stack.ps1  train-model.ps1
src/maintenance_preventive/: __init__.py  bootstrap.py  config.py  mlflow_tracking.py  versioning.py
src/maintenance_preventive/api/: main.py
src/maintenance_preventive/data/: fetch_dataset.py  loaders.py
src/maintenance_preventive/features/: engineering.py
src/maintenance_preventive/models/: __init__.py  predict.py  reporting.py  train.py
tests/: test_api_monitoring.py  test_data_loading.py  test_fetch_dataset.py  test_mlflow_tracking.py  test_versioning.py
